Bug 320589 - KWin crashed after tryng to re-configure krunner position
Summary: KWin crashed after tryng to re-configure krunner position
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/110...
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2013-06-02 00:07 UTC by Hrvoje Senjan
Modified: 2013-06-05 12:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
KWin supportInformation (5.33 KB, text/plain)
2013-06-02 00:11 UTC, Hrvoje Senjan
Details
patch (640 bytes, patch)
2013-06-02 11:41 UTC, Thomas Lübking
Details
New crash information added by DrKonqi (4.65 KB, text/plain)
2013-06-04 17:45 UTC, Alex Fiestas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2013-06-02 00:07:30 UTC
Application: kwin (4.10.60 "release 7")
KDE Platform Version: 4.10.60 "release 7"
Qt Version: 4.8.5
Operating System: Linux 3.9.4-1.g51bf0ff-desktop x86_64
Distribution: "openSUSE 13.1 Milestone 1 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

Was top oriented, tried to change to free float, accidentaly pressed Ctrl+Esc (KSysGuard)
-> KWin crashed.
I don't think i noticed a similar trigger for now
Pretty poor quality report, but it's late already ;-) 
Steps to reproduce, fire up krunner, select settings, press Ctrl+Esc (yes, it's reproducible here)

-- Backtrace:
Application: KWin (kwin), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f8163762780 (LWP 26888))]

Thread 3 (Thread 0x7f8147708700 (LWP 26890)):
#0  0x00007f815d56d964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f8162161057 in ?? () from /usr/lib64/libQtScript.so.4
#2  0x00007f8162161089 in ?? () from /usr/lib64/libQtScript.so.4
#3  0x00007f815d569e0e in start_thread () from /lib64/libpthread.so.0
#4  0x00007f8162f5db9d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f80b6ba7700 (LWP 26895)):
#0  0x00007f815d56d964 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f80b712afdb in ?? () from /usr/lib64/dri/r600_dri.so
#2  0x00007f815d569e0e in start_thread () from /lib64/libpthread.so.0
#3  0x00007f8162f5db9d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f8163762780 (LWP 26888)):
[KCrash Handler]
#6  KWin::Client::layoutDecorationRects (this=0x0, left=..., top=..., right=..., bottom=..., mode=KWin::Client::WindowRelative) at /usr/src/debug/kde-workspace-git/build/kwin/client.moc:605
#7  0x00007f81632ec351 in KWin::Scene::Window::buildQuads (this=0x32f2310, force=<optimized out>) at /usr/src/debug/kde-workspace-git/kwin/scene.cpp:722
#8  0x00007f81632ed445 in KWin::Scene::paintSimpleScreen (this=this@entry=0x2b87ae0, orig_mask=orig_mask@entry=0, region=...) at /usr/src/debug/kde-workspace-git/kwin/scene.cpp:284
#9  0x00007f81632eb16e in KWin::Scene::finalPaintScreen (this=0x2b87ae0, mask=0, region=..., data=...) at /usr/src/debug/kde-workspace-git/kwin/scene.cpp:184
#10 0x00007f816330f548 in KWin::EffectsHandlerImpl::paintScreen (this=0x2e653e0, mask=mask@entry=0, region=..., data=...) at /usr/src/debug/kde-workspace-git/kwin/effects.cpp:372
#11 0x00007f8162a39dc7 in KWin::Effect::paintScreen (this=this@entry=0x3115cb0, mask=mask@entry=0, region=..., data=...) at /usr/src/debug/kde-workspace-git/kwin/libkwineffects/kwineffects.cpp:509
#12 0x00007f816330f4f5 in KWin::EffectsHandlerImpl::paintScreen (this=0x2e653e0, mask=mask@entry=0, region=..., data=...) at /usr/src/debug/kde-workspace-git/kwin/effects.cpp:369
#13 0x00007f8162a39dc7 in KWin::Effect::paintScreen (this=this@entry=0x23abc00, mask=mask@entry=0, region=..., data=...) at /usr/src/debug/kde-workspace-git/kwin/libkwineffects/kwineffects.cpp:509
#14 0x00007f816330f4f5 in KWin::EffectsHandlerImpl::paintScreen (this=0x2e653e0, mask=mask@entry=0, region=..., data=...) at /usr/src/debug/kde-workspace-git/kwin/effects.cpp:369
#15 0x00007f8162a39dc7 in KWin::Effect::paintScreen (this=this@entry=0x3115640, mask=mask@entry=0, region=..., data=...) at /usr/src/debug/kde-workspace-git/kwin/libkwineffects/kwineffects.cpp:509
#16 0x00007f816330f4f5 in KWin::EffectsHandlerImpl::paintScreen (this=0x2e653e0, mask=0, region=..., data=...) at /usr/src/debug/kde-workspace-git/kwin/effects.cpp:369
#17 0x00007f81632ec810 in KWin::Scene::paintScreen (this=0x2b87ae0, mask=0x7fff52a613fc, region=0x7fff52a614c0) at /usr/src/debug/kde-workspace-git/kwin/scene.cpp:141
#18 0x00007f816330398b in KWin::SceneOpenGL::paint (this=0x2b87ae0, damage=..., toplevels=...) at /usr/src/debug/kde-workspace-git/kwin/scene_opengl.cpp:345
#19 0x00007f81632e5047 in KWin::Compositor::performCompositing (this=0x2570f60) at /usr/src/debug/kde-workspace-git/kwin/composite.cpp:617
#20 0x00007f815d91530c in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#21 0x00007f815ca8917c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#22 0x00007f815ca8baeb in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#23 0x00007f8161bbd756 in KApplication::notify (this=0x7fff52a622c0, receiver=0x2570f60, event=0x7fff52a61c80) at /usr/src/debug/kdelibs-git/kdeui/kernel/kapplication.cpp:311
#24 0x00007f815d8fbabe in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#25 0x00007f815d92cbc1 in ?? () from /usr/lib64/libQtCore.so.4
#26 0x00007f815d92d278 in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#27 0x00007f815cb2a77f in ?? () from /usr/lib64/libQtGui.so.4
#28 0x00007f815d8fa76f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#29 0x00007f815d8fa9f8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#30 0x00007f815d8ffc68 in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#31 0x00007f816329e66c in kdemain (argc=2, argv=0x7fff52a62408) at /usr/src/debug/kde-workspace-git/kwin/main.cpp:591
#32 0x00007f8162e96a15 in __libc_start_main () from /lib64/libc.so.6
#33 0x0000000000400761 in _start () at ../sysdeps/x86_64/start.S:123

Reported using DrKonqi
Comment 1 Hrvoje Senjan 2013-06-02 00:11:13 UTC
Created attachment 80249 [details]
KWin supportInformation
Comment 2 Martin Flöser 2013-06-02 07:42:54 UTC
Steps are perfectly reproduceable.
Comment 3 Thomas Lübking 2013-06-02 11:41:11 UTC
Created attachment 80255 [details]
patch

Doesn't happen here, but the bug seems obvious - this operates on a toplevel (i guess it's related on whether krunner operates bypassing or as dock and i frankly gave up on understanding the logics behind that)
Comment 4 Hrvoje Senjan 2013-06-02 12:57:37 UTC
(In reply to comment #3)
> Created attachment 80255 [details]
> patch
Works! :-)
Comment 5 Thomas Lübking 2013-06-02 14:59:14 UTC
silghtly different patch, but logically equal (well, hopefully ;-)
Comment 6 Hrvoje Senjan 2013-06-02 15:40:44 UTC
(In reply to comment #5)
> silghtly different patch, but logically equal (well, hopefully ;-)

Yes, that one also works :-)
Comment 7 Alex Fiestas 2013-06-04 17:45:05 UTC
Created attachment 80304 [details]
New crash information added by DrKonqi

kwin (4.10.60) on KDE Platform 4.10.60 using Qt 4.8.4

Execute an application after restarting KWin.

-- Backtrace (Reduced):
#6  0x00007f52b0863031 in KWin::Client::layoutDecorationRects (this=0x0, left=..., top=..., right=..., bottom=..., mode=KWin::Client::WindowRelative) at /home/afiestas/kde/source/kde-workspace/kwin/client.cpp:550
#7  0x00007f52b08ee094 in KWin::Scene::Window::buildQuads (this=0x10bc480, force=false) at /home/afiestas/kde/source/kde-workspace/kwin/scene.cpp:722
#8  0x00007f52b08eb502 in KWin::Scene::paintSimpleScreen (this=0x1430270, orig_mask=0, region=...) at /home/afiestas/kde/source/kde-workspace/kwin/scene.cpp:284
#9  0x00007f52b08ea9ec in KWin::Scene::finalPaintScreen (this=0x1430270, mask=0, region=..., data=...) at /home/afiestas/kde/source/kde-workspace/kwin/scene.cpp:184
#10 0x00007f52b0914442 in KWin::EffectsHandlerImpl::paintScreen (this=0x175c510, mask=0, region=..., data=...) at /home/afiestas/kde/source/kde-workspace/kwin/effects.cpp:372
Comment 8 Thomas Lübking 2013-06-05 12:37:32 UTC
Git commit dac58f1a272a2bed9e93b4d6224e87bf4b45b040 by Thomas Lübking.
Committed on 02/06/2013 at 16:53.
Pushed by luebking into branch 'master'.

catch NULL client pointer
FIXED-IN: 4.11
REVIEW: 110782

M  +10   -5    kwin/scene.cpp

http://commits.kde.org/kde-workspace/dac58f1a272a2bed9e93b4d6224e87bf4b45b040