catch NULL client pointer

BUG: 320589
FIXED-IN: 4.11
REVIEW: 110782